--- a/src/components/card-list/card-list.style.css
+++ b/src/components/card-list/card-list.style.css
@@ -5,3 +5,21 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 30px;
 }
+
+@media screen and (max-width: 992px) {
+  .card-list {
+    width: 50%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .card-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 15px;
+    float: left;
+  }
+}
