--- a/src/components/card-list/card-list.style.css
+++ b/src/components/card-list/card-list.style.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 992px) {
   .card-list {
-    width: 50%;
+    width: 750px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
